<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.change_city.ChangeCityFragment">

    <data>

        <variable
            name="viewModel"
            type="com.micosi.pogodynka.ui.change_city.ChangeCityViewModel" />
    </data>

    <LinearLayout
        android:background="@color/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:text="@string/change_city"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:hint="@string/city"
            android:inputType="textCapSentences"
            android:text="@={viewModel.city}" />

        <Button
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_marginVertical="40dp"
            android:enabled="@{viewModel.isCityCorrect()}"
            android:onClick="@{()->viewModel.changeCity()}"
            android:text="@string/button_change_city"
            android:textSize="20sp" />

    </LinearLayout>

</layout>